welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: value or is not a member of Boolean
if (message!='A' or message!='B' or message!='C' or message!='Z' or message!='Y' or message!='X' or message!='R' or message!='L' or message!='I') {
                 ^BDRBuggle:44: error: type mismatch;
 found   : Char('a')
 required: String
  message='a'
          ^BDRBuggle:45: error: not found: value lireMessage
  message=lireMessage()
          ^